infra/cdk.out/ProdgenceStack.template.json
{
 "Description": "Prodgence production stack (Frankfurt): VPC + RDS + ECR + App Runner",
 "Resources": {
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProdgenceStack/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/Resource"
   }
  },
  "VpcPublicSubnet1Subnet5C2D37C4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-central-1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ProdgenceStack/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PublicSubnet1/Subnet"
   }
  },
  "VpcPublicSubnet1RouteTable6C95E38E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProdgenceStack/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PublicSubnet1/RouteTable"
   }
  },
  "VpcPublicSubnet1RouteTableAssociation97140677": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "VpcPublicSubnet1DefaultRoute3DA9E72A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "VpcPublicSubnet1EIPD7E02669": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProdgenceStack/Vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PublicSubnet1/EIP"
   }
  },
  "VpcPublicSubnet1NATGateway4D7517AA": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcPublicSubnet1EIPD7E02669",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProdgenceStack/Vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VpcPublicSubnet1DefaultRoute3DA9E72A",
    "VpcPublicSubnet1RouteTableAssociation97140677"
   ],
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PublicSubnet1/NATGateway"
   }
  },
  "VpcPublicSubnet2Subnet691E08A3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-central-1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ProdgenceStack/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PublicSubnet2/Subnet"
   }
  },
  "VpcPublicSubnet2RouteTable94F7E489": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProdgenceStack/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PublicSubnet2/RouteTable"
   }
  },
  "VpcPublicSubnet2RouteTableAssociationDD5762D8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPublicSubnet2RouteTable94F7E489"
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet2Subnet691E08A3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "VpcPublicSubnet2DefaultRoute97F91067": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcPublicSubnet2RouteTable94F7E489"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "VpcPrivateSubnet1Subnet536B997A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-central-1a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ProdgenceStack/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PrivateSubnet1/Subnet"
   }
  },
  "VpcPrivateSubnet1RouteTableB2C5B500": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProdgenceStack/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PrivateSubnet1/RouteTable"
   }
  },
  "VpcPrivateSubnet1RouteTableAssociation70C59FA6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet1RouteTableB2C5B500"
    },
    "SubnetId": {
     "Ref": "VpcPrivateSubnet1Subnet536B997A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "VpcPrivateSubnet1DefaultRouteBE02A9ED": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcPublicSubnet1NATGateway4D7517AA"
    },
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet1RouteTableB2C5B500"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "VpcPrivateSubnet2Subnet3788AAA1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-central-1b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ProdgenceStack/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PrivateSubnet2/Subnet"
   }
  },
  "VpcPrivateSubnet2RouteTableA678073B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProdgenceStack/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PrivateSubnet2/RouteTable"
   }
  },
  "VpcPrivateSubnet2RouteTableAssociationA89CAD56": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet2RouteTableA678073B"
    },
    "SubnetId": {
     "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "VpcPrivateSubnet2DefaultRoute060D2087": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcPublicSubnet1NATGateway4D7517AA"
    },
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet2RouteTableA678073B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProdgenceStack/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/IGW"
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Vpc/VPCGW"
   }
  },
  "DbSubnetGroup6F6C177A": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for Db database",
    "SubnetIds": [
     {
      "Ref": "VpcPrivateSubnet1Subnet536B997A"
     },
     {
      "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Db/SubnetGroup/Default"
   }
  },
  "DbSecurityGroupC34ABFAB": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Db database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Db/SecurityGroup/Resource"
   }
  },
  "DbSecurityGroupfromProdgenceStackConnectorSg4CB79AE0IndirectPortACDEDAC2": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "App Runner to RDS",
    "FromPort": {
     "Fn::GetAtt": [
      "Db5D02A0A9",
      "Endpoint.Port"
     ]
    },
    "GroupId": {
     "Fn::GetAtt": [
      "DbSecurityGroupC34ABFAB",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "ConnectorSgC689ACEA",
      "GroupId"
     ]
    },
    "ToPort": {
     "Fn::GetAtt": [
      "Db5D02A0A9",
      "Endpoint.Port"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Db/SecurityGroup/from ProdgenceStackConnectorSg4CB79AE0:{IndirectPort}"
   }
  },
  "ProdgenceStackDbSecretA2CAA9E03fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"prodgence\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Db/Secret/Resource"
   }
  },
  "DbSecretAttachment7AED447C": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "ProdgenceStackDbSecretA2CAA9E03fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "Db5D02A0A9"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Db/Secret/Attachment/Resource"
   }
  },
  "Db5D02A0A9": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "BackupRetentionPeriod": 7,
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t4g.micro",
    "DBName": "prodgence",
    "DBSubnetGroupName": {
     "Ref": "DbSubnetGroup6F6C177A"
    },
    "DeletionProtection": true,
    "Engine": "postgres",
    "EngineVersion": "16",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "ProdgenceStackDbSecretA2CAA9E03fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "prodgence",
    "MaxAllocatedStorage": 200,
    "MultiAZ": false,
    "PubliclyAccessible": false,
    "StorageEncrypted": true,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "DbSecurityGroupC34ABFAB",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Snapshot",
   "DeletionPolicy": "Snapshot",
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Db/Resource"
   }
  },
  "Repo02AC86CF": {
   "Type": "AWS::ECR::Repository",
   "Properties": {
    "EmptyOnDelete": true,
    "ImageScanningConfiguration": {
     "ScanOnPush": true
    },
    "LifecyclePolicy": {
     "LifecyclePolicyText": "{\"rules\":[{\"rulePriority\":1,\"selection\":{\"tagStatus\":\"any\",\"countType\":\"imageCountMoreThan\",\"countNumber\":10},\"action\":{\"type\":\"expire\"}}]}"
    },
    "RepositoryName": "prodgence"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Repo/Resource"
   }
  },
  "AppRunnerAccessRoleC89E5843": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "build.apprunner.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/AppRunnerAccessRole/Resource"
   }
  },
  "AppRunnerAccessRoleDefaultPolicy4FF2CFAF": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:GetDownloadUrlForLayer",
        "ecr:BatchGetImage"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "Repo02AC86CF",
         "Arn"
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "AppRunnerAccessRoleDefaultPolicy4FF2CFAF",
    "Roles": [
     {
      "Ref": "AppRunnerAccessRoleC89E5843"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/AppRunnerAccessRole/DefaultPolicy/Resource"
   }
  },
  "AppRunnerInstanceRole96A5A063": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "tasks.apprunner.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/AppRunnerInstanceRole/Resource"
   }
  },
  "AppRunnerInstanceRoleDefaultPolicy35195718": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "secretsmanager:GetSecretValue",
        "secretsmanager:DescribeSecret"
       ],
       "Effect": "Allow",
       "Resource": {
        "Ref": "DbSecretAttachment7AED447C"
       }
      },
      {
       "Action": [
        "secretsmanager:GetSecretValue",
        "secretsmanager:DescribeSecret"
       ],
       "Effect": "Allow",
       "Resource": "arn:aws:secretsmanager:eu-central-1:385542056888:secret:prodgence/anthropic-yWsYCn"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "AppRunnerInstanceRoleDefaultPolicy35195718",
    "Roles": [
     {
      "Ref": "AppRunnerInstanceRole96A5A063"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/AppRunnerInstanceRole/DefaultPolicy/Resource"
   }
  },
  "ConnectorSgC689ACEA": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "ProdgenceStack/ConnectorSg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/ConnectorSg/Resource"
   }
  },
  "VpcConnector": {
   "Type": "AWS::AppRunner::VpcConnector",
   "Properties": {
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "ConnectorSgC689ACEA",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "VpcPrivateSubnet1Subnet536B997A"
     },
     {
      "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/VpcConnector"
   }
  },
  "Service": {
   "Type": "AWS::AppRunner::Service",
   "Properties": {
    "HealthCheckConfiguration": {
     "HealthyThreshold": 1,
     "Interval": 10,
     "Protocol": "TCP",
     "Timeout": 5,
     "UnhealthyThreshold": 5
    },
    "InstanceConfiguration": {
     "Cpu": "1 vCPU",
     "InstanceRoleArn": {
      "Fn::GetAtt": [
       "AppRunnerInstanceRole96A5A063",
       "Arn"
      ]
     },
     "Memory": "2 GB"
    },
    "NetworkConfiguration": {
     "EgressConfiguration": {
      "EgressType": "VPC",
      "VpcConnectorArn": {
       "Fn::GetAtt": [
        "VpcConnector",
        "VpcConnectorArn"
       ]
      }
     }
    },
    "ServiceName": "prodgence",
    "SourceConfiguration": {
     "AuthenticationConfiguration": {
      "AccessRoleArn": {
       "Fn::GetAtt": [
        "AppRunnerAccessRoleC89E5843",
        "Arn"
       ]
      }
     },
     "AutoDeploymentsEnabled": true,
     "ImageRepository": {
      "ImageConfiguration": {
       "Port": "3000",
       "RuntimeEnvironmentSecrets": [
        {
         "Name": "PGPASSWORD",
         "Value": {
          "Fn::Join": [
           "",
           [
            {
             "Ref": "DbSecretAttachment7AED447C"
            },
            ":password::"
           ]
          ]
         }
        },
        {
         "Name": "ANTHROPIC_API_KEY",
         "Value": "arn:aws:secretsmanager:eu-central-1:385542056888:secret:prodgence/anthropic-yWsYCn:ANTHROPIC_API_KEY::"
        }
       ],
       "RuntimeEnvironmentVariables": [
        {
         "Name": "NODE_ENV",
         "Value": "production"
        },
        {
         "Name": "HOSTNAME",
         "Value": "0.0.0.0"
        },
        {
         "Name": "PGHOST",
         "Value": {
          "Fn::GetAtt": [
           "Db5D02A0A9",
           "Endpoint.Address"
          ]
         }
        },
        {
         "Name": "PGPORT",
         "Value": {
          "Fn::GetAtt": [
           "Db5D02A0A9",
           "Endpoint.Port"
          ]
         }
        },
        {
         "Name": "PGDATABASE",
         "Value": "prodgence"
        },
        {
         "Name": "PGUSER",
         "Value": "prodgence"
        },
        {
         "Name": "PGSSLMODE",
         "Value": "require"
        }
       ]
      },
      "ImageIdentifier": {
       "Fn::Join": [
        "",
        [
         {
          "Fn::Select": [
           4,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "Repo02AC86CF",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".dkr.ecr.",
         {
          "Fn::Select": [
           3,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "Repo02AC86CF",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".",
         {
          "Ref": "AWS::URLSuffix"
         },
         "/",
         {
          "Ref": "Repo02AC86CF"
         },
         ":latest"
        ]
       ]
      },
      "ImageRepositoryType": "ECR"
     }
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/Service"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31QTW/CMAz9LbuHjFXbtCsfE+plq1rEdXKDxwKtUzkOCFX97xMNtGiHnZ798uz3nEQnry96+gAnPzHbw6SypW4LAXNQcPJfLZpEt5vGqMU3bbKFykJZWVOEklAu3FjlLgiuoaxw5Edu5r0zFsQ6GsSX4j3NLvABsgLBE5xVxvYIguPilASZcBDEJNduJgLmp0YSVaAJbOW8YheaPsO/REo7Ru87xVuv2yUIlOAxJS9ABlX0H0aX83vipi7QcAy5nN8mO+V71tdAsEPWbXS+CCOsgXcod8kHwd+XTqFh3ebYOG/FcX/82HXKQq3b3MU/7zFzlTW9LladgqbhQHRNsmnMwhGhEcfRmI/WYNepHL0LbPpVn0GaIJ0it0W994/H5Fk/venpw95bO+FAYmvUecRfJceq0EQCAAA="
   },
   "Metadata": {
    "aws:cdk:path": "ProdgenceStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "EcrRepoUri": {
   "Value": {
    "Fn::Join": [
     "",
     [
      {
       "Fn::Select": [
        4,
        {
         "Fn::Split": [
          ":",
          {
           "Fn::GetAtt": [
            "Repo02AC86CF",
            "Arn"
           ]
          }
         ]
        }
       ]
      },
      ".dkr.ecr.",
      {
       "Fn::Select": [
        3,
        {
         "Fn::Split": [
          ":",
          {
           "Fn::GetAtt": [
            "Repo02AC86CF",
            "Arn"
           ]
          }
         ]
        }
       ]
      },
      ".",
      {
       "Ref": "AWS::URLSuffix"
      },
      "/",
      {
       "Ref": "Repo02AC86CF"
      }
     ]
    ]
   }
  },
  "DbEndpoint": {
   "Value": {
    "Fn::GetAtt": [
     "Db5D02A0A9",
     "Endpoint.Address"
    ]
   }
  },
  "DbSecretArn": {
   "Value": {
    "Ref": "DbSecretAttachment7AED447C"
   }
  },
  "ServiceUrl": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "https://",
      {
       "Fn::GetAtt": [
        "Service",
        "ServiceUrl"
       ]
      }
     ]
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
